wide align responsive width fix

--- a/assets/src/scss/components/content.scss
+++ b/assets/src/scss/components/content.scss
@@ -23,6 +23,7 @@
   
   &.alignwide {
     width: $size__site-width;
+    max-width: 100%;
     padding-left: $size__padding-resp;
     padding-right: $size__padding-resp;
   }
