--- a/assets/src/scss/pages/homepage.scss
+++ b/assets/src/scss/pages/homepage.scss
@@ -3,7 +3,6 @@ body.home {
   .website-hero {
     width: 100%;
     height: 55vh;
-    max-height: 700px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,6 +12,13 @@ body.home {
   
     @media #{$mq__smaller-than-tablet} {
       height: 80vh;
+    }
+  
+    &.fullpage-hero {
+      height: 100vh;
+      .entry-image {
+        max-height: 1200px;
+      }
     }
     
     & > * {
@@ -24,6 +30,7 @@ body.home {
       top: 0;
       width: 100%;
       height: 100%;
+      max-height: 700px;
       opacity: .66;
     }
     
